--- a/accounts/templates/account/change_password.html
+++ b/accounts/templates/account/change_password.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -15,21 +14,17 @@
     <div class="container">
       <form action="" method="post">
         {% csrf_token %}
-        {% for field in form %}
+        {{form.as_p}}
+        <!-- {% for field in form %}
         <div class="fieldWrapper">
             {{ field.errors }}
             {{ field.label_tag }} {{ field }}
         </div>
-    {% endfor %}
+    {% endfor %} -->
     <button class='btn  btn-mdb-color' type="submit">Submit</button>
     </form>
-
     </div>
-
-
     {% endblock %}
-
-
 
   </body>
 </html>
