--- a/accounts/templates/account/reg_form.html
+++ b/accounts/templates/account/reg_form.html
@@ -1,24 +1,16 @@
 {% extends 'base.html' %}
 
-  {% block head %}
-  <title>Register</title>
-  {% endblock %}
+{% block head %}
+<title>Register</title>
+{% endblock %}
 
-  {% block body %}
-  <div class="container">
-    <h1>Register</h1>
+{% block body %}
+<div class="container">
+  <h1>Register</h1>
   <form action="" method="post">
     {% csrf_token %}
-    {% for field in form %}
-    <div class="fieldWrapper">
-        {{ field.errors }}
-        {{ field.label_tag }} {{ field }}
-    </div>
-{% endfor %}
-<button class='btn  btn-mdb-color' type="submit">Submit</button>
-</form>
-  </div>
-  {% endblock %}
-</body>
-
-</html>
+    {{form.as_p}}
+    <button class='btn  btn-mdb-color' type="submit">Submit</button>
+  </form>
+</div>
+{% endblock %}
