--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -1,4 +1,3 @@
-
 {% load shopping_cart %}
 
 <!DOCTYPE html>
@@ -21,40 +20,44 @@
   <link href="{% static 'css/style.min.css' %}" rel="stylesheet">
 
   <style type="text/css">
-  html,
-  body,
-  header,
-
-  @media (max-width: 740px) {
-
     html,
     body,
     header,
 
-  }
+    @media (max-width: 740px) {
 
-  @media (min-width: 800px) and (max-width: 850px) {
+      html,
+      body,
+      header,
 
-    html,
-    body,
-    header,
+    }
 
-  }
+    @media (min-width: 800px) and (max-width: 850px) {
 
-a.nav-link{
-  font-size:1.2rem;
-}
+      html,
+      body,
+      header,
 
-{% block style%}
-{% endblock%}
+    }
 
-</style>
+    a.nav-link {
+      font-size: 1.2rem;
+    }
+
+      {
+      % block style%
+    }
+
+      {
+      % endblock%
+    }
+  </style>
 
 </head>
 
 <body>
   {% if messages %}
-    {% for message in messages %}
+  {% for message in messages %}
   <div class="alert alert-warning alert-dismissible alert-{{ message.tags }} fade show" role="alert">
     {{message}}
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -62,18 +65,20 @@ a.nav-link{
     </button>
   </div>
   {% endfor %}
-{% endif %}
+  {% endif %}
 
-<main>
+  <main>
 
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5">
 
       <!-- Navbar brand -->
-      <span class="navbar-brand align-middle"><a href="{% url 'items:home' %}"><img src="{% static 'img/logo3.png' %}"  alt="logo" style="width:150px"></a></span>
+      <span class="navbar-brand align-middle"><a href="{% url 'items:home' %}"><img src="{% static 'img/logo3.png' %}"
+            alt="logo" style="width:150px"></a></span>
 
       <!-- Collapse button -->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
+        aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -108,7 +113,8 @@ a.nav-link{
         <ul class="nav navbar-nav navbar-right ">
           {% if user.is_authenticated %}
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Account
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -124,7 +130,8 @@ a.nav-link{
 
           {% else %}
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Account
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -145,11 +152,11 @@ a.nav-link{
             <a class="nav-link waves-effect" href="{% url 'items:order_summary' %}">
               {% else %}
               <a class="nav-link waves-effect" href="{% url 'accounts:login' %}">
-             {% endif %}
-              <span class="badge red z-depth-1 mr-1"> {{request.user| cart_item_count}} </span>
-              <i class="fas fa-shopping-cart"></i>
-              <span class="clearfix d-none d-sm-inline-block"> Cart </span>
-            </a>
+                {% endif %}
+                <span class="badge red z-depth-1 mr-1"> {{request.user| cart_item_count}} </span>
+                <i class="fas fa-shopping-cart"></i>
+                <span class="clearfix d-none d-sm-inline-block"> Cart </span>
+              </a>
           </li>
 
         </ul>
@@ -160,90 +167,93 @@ a.nav-link{
     {% endblock %}
 
   </main>
-    <!--Footer-->
+  <!--Footer-->
 
-  <footer class="page-footer font-small wow fadeIn footer" >
+  <footer class="page-footer font-small wow fadeIn footer">
 
-  <!-- Footer Elements -->
-  <div class="container">
+    <!-- Footer Elements -->
+    <div class="container">
 
-    <!-- Grid row-->
-    <div class="row">
+      <!-- Grid row-->
+      <div class="row">
 
-      <!-- Grid column -->
-      <div class="col-md-12 py-3">
-        <div class="mb-5 flex-center">
+        <!-- Grid column -->
+        <div class="col-md-12 py-3">
+          <div class="mb-5 flex-center">
 
-          <!-- Facebook -->
-          <a class="fb-ic">
-            <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          <!-- Twitter -->
-          <a class="tw-ic">
-            <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          <!-- Google +-->
-          <a class="gplus-ic">
-            <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          <!--Linkedin -->
-          <a class="li-ic">
-            <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          <!--Instagram-->
-          <a class="ins-ic">
-            <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          <!--Pinterest-->
-          <a class="pin-ic">
-            <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
-          </a>
+            <!-- Facebook -->
+            <a class="fb-ic">
+              <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+            </a>
+            <!-- Twitter -->
+            <a class="tw-ic">
+              <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+            </a>
+            <!-- Google +-->
+            <a class="gplus-ic">
+              <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+            </a>
+            <!--Linkedin -->
+            <a class="li-ic">
+              <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+            </a>
+            <!--Instagram-->
+            <a class="ins-ic">
+              <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+            </a>
+            <!--Pinterest-->
+            <a class="pin-ic">
+              <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
+            </a>
+          </div>
         </div>
+        <!-- Grid column -->
       </div>
-      <!-- Grid column -->
+      <!-- Grid row-->
     </div>
-    <!-- Grid row-->
-  </div>
-  <!-- Footer Elements -->
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://mdbootstrap.com/">Lina Liao</a>
-  </div>
-  <!-- Copyright -->
-</footer>
+    <!-- Footer Elements -->
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+      <a href="https://mdbootstrap.com/">Lina Liao</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
 
   <!-- JQuery -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- Bootstrap tooltips -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
   <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.15.0/js/mdb.min.js"></script>
 
-<script>
-  $(document).ready(function() {
+  <script>
+    $(document).ready(function () {
 
-    var docHeight = $(window).height();
-    var footerHeight = $('.footer').height();
-    var footerTop = $('.footer').position().top + footerHeight;
+      var docHeight = $(window).height();
+      var footerHeight = $('.footer').height();
+      var footerTop = $('.footer').position().top + footerHeight;
 
-    if (footerTop < docHeight) {
-     $('.footer').css('margin-top', 10+ (docHeight - footerTop) + 'px');
-    }
+      if (footerTop < docHeight) {
+        $('.footer').css('margin-top', 10 + (docHeight - footerTop) + 'px');
+      }
 
-    $('.navbar-nav a').filter(function(){return this.href==location.href}).parent().addClass('active').siblings().removeClass('active')
-    		$('.nav a').click(function(){
-    			$(this).parent().addClass('active').siblings().removeClass('active')
-    		})
+      $('.navbar-nav a').filter(function () { return this.href == location.href }).parent().addClass('active').siblings().removeClass('active')
+      $('.nav a').click(function () {
+        $(this).parent().addClass('active').siblings().removeClass('active')
+      })
 
 
-   });
+    });
 
-</script>
+  </script>
 
   {% block script %}
   {% endblock%}
 
 </body>
+
 </html>
